src/test/ui/nll/closure-requirements/propagate-approximated-val.stderr
warning: not reporting region error due to -Znll
  --> $DIR/propagate-approximated-val.rs:48:9
   |
48 |         demand_y(outlives1, outlives2, x.get())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: External requirements
  --> $DIR/propagate-approximated-val.rs:46:45
   |
46 |       establish_relationships(cell_a, cell_b, |outlives1, outlives2, x, y| {
   |  _____________________________________________^
47 | |         // Only works if 'x: 'y:
48 | |         demand_y(outlives1, outlives2, x.get())
49 | |     });
   | |_____^
   |
   = note: defining type: [closure@$DIR/propagate-approximated-val.rs:46:45: 49:6<i16, for<'r, 's> extern "rust-call" fn((std::cell::Cell<&'_#1r &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 'r(9533))) u32>, std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 's(9534))) &'_#2r u32>, std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 'r(9533))) u32>, std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 's(9534))) u32>))>]
   = note: number of external vids: 3
   = note: where '_#1r: '_#2r

error[E0597]: borrowed value does not live long enough (Ast)
  --> $DIR/propagate-approximated-val.rs:48:40
   |
48 |         demand_y(outlives1, outlives2, x.get())
   |                                        ^^^^^^^ does not live long enough
   |
   = note: borrowed value must be valid for the static lifetime...
note: ...but borrowed value is only valid for the anonymous lifetime #2 defined on the body at 46:45
  --> $DIR/propagate-approximated-val.rs:46:45
   |
46 |       establish_relationships(cell_a, cell_b, |outlives1, outlives2, x, y| {
   |  _____________________________________________^
47 | |         // Only works if 'x: 'y:
48 | |         demand_y(outlives1, outlives2, x.get())
49 | |     });
   | |_____^

note: No external requirements
  --> $DIR/propagate-approximated-val.rs:45:1
   |
45 | / fn test<'a, 'b>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>) {
46 | |     establish_relationships(cell_a, cell_b, |outlives1, outlives2, x, y| {
47 | |         // Only works if 'x: 'y:
48 | |         demand_y(outlives1, outlives2, x.get())
49 | |     });
50 | | }
   | |_^
   |
   = note: defining type: for<'a, 'b> fn(std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(1:16), 'a(90))) u32>, std::cell::Cell<&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(1:17), 'b(92))) u32>) {test}

error: aborting due to previous error

